[package]
name = "linear-sumcheck"
version = "0.1.0"
authors = [
    "Tom Shen <tomshen@berkeley.edu>"
]
edition = "2018"

[lib]
name = "linear_sumcheck"
path = "src/lib.rs"


[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false , features = ["derive"]}
rand_core = { version = "0.5", default-features = false }
rand = {version = "0.7.3", default-features = false}
blake2 = { version = "0.9", default-features = false }
ark-std = { git = "https://github.com/arkworks-rs/utils/", default-features = false }
hashbrown = { version = "0.9.1" }

[dev-dependencies]
ark-poly = { git = "https://github.com/arkworks-rs/algebra"} # for unit testing
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features=["bls12_381_scalar_field", "bls12_381_curve"]}

[features]
default = ["std"]
std = ["ark-ff/std", "ark-serialize/std","rand/std", "rand_core/std", "blake2/std", "ark-std/std"]