[package]
name = "sumcheck-benches"
version = "0.3.0"
authors = [
    "Tom Shen <tomshen@berkeley.edu>",
    "arkworks contributors"
]
description = "Benchmarks for ark-linear-sumcheck"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/sumcheck/"
keywords = ["cryptography", "finite-fields", "polynomials", "sumcheck"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
publish = false
edition = "2018"

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }
ark-test-curves = { version = "^0.3.0", default-features = false, features = ["bls12_381_scalar_field", "bls12_381_curve"] }

criterion = { version = "0.3.1" }
ark-linear-sumcheck = { path = "../" }
rayon = { version = "1", optional = true }

[features]
default = [ "std" ]
std = ["ark-ff/std", "ark-std/std", "ark-poly/std"]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-std/parallel", "rayon"]

[[bench]]
name = "ml_sumcheck"
path = "benches/ml_sumcheck_bench.rs"
harness = false

[[bench]]
name = "gkr_round_sumcheck"
path = "benches/gkr_round_sumcheck_bench.rs"
harness = false

# To be removed in the new release.
[patch.crates-io]
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra" }
ark-std = { git = "https://github.com/arkworks-rs/std" }